# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2020-11-27 Michael Truog   <mjtruog at protonmail dot com>

    * CloudI version 2.0.1 released

2020-11-14 Michael Truog   <mjtruog at protonmail dot com>

    * Fix pedantic C/C++ compilation errors

2020-11-11 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_core constant for Erlang process suspended unblock

2020-11-07 Michael Truog   <mjtruog at protonmail dot com>

    * Fix service termination of service processes that have entered
      a suspended state (Erlang process suspend, not CloudI service suspend)
      due to sending too many distributed Erlang messages by not waiting
      for the suspended processes to execute their termination source code
    * Add cloudi_service_funnel argument requests_extend_liveness
      with the default set to false (previously would have been true)
      to prevent requests from extending the liveness of response data

2020-11-01 Michael Truog   <mjtruog at protonmail dot com>

    * Fix CloudI logger internal logging when a node redirect is set
    * iCloud is having more than 6 hours of downtime and
      is completely unrelated to CloudI

2020-10-26 Michael Truog   <mjtruog at protonmail dot com>

    * Allow a disappearing log file directory to be a transient error
      (added to logging_status as file_read_fail)

2020-10-24 Michael Truog   <mjtruog at protonmail dot com>

    * Add the syscall_lock service configuration option
      for external services (supported on OpenBSD and Linux)
    * Fix C CloudI API cloudi_info_key_value_parse
      handling of info_size <= 1

2020-10-21 Michael Truog   <mjtruog at protonmail dot com>

    * Fix CloudI Service API code_status build_operating_system value
      for operating systems that have a uname that doesn't support -o
      (uses -s instead, e.g. on OpenBSD)
    * The --with-cxx-backtrace configure argument defaults to yes now
